--- a/_config.yml
+++ b/_config.yml
@@ -77,7 +77,7 @@ features                                  :
 
 
 # Theme Settings
-topbar_color                              : "#000000"
+topbar_color                              : "#6237A0"
 topbar_transparency                       : 0.1
 topbar_title_color                        : "#ffffff"
 
