--- a/_config.yml
+++ b/_config.yml
@@ -14,7 +14,7 @@ app_name                                  : Massaj Studio                       
 app_price                                 : Free                                          # Automatically populates if not set and if iOS app ID is set.  Otherwise enter manually.
 app_description                           : Certified. Massage. Therapists.
 
-enable_smart_app_banner                   : true                                      # Set to true to show a smart app banner at top of page on mobile devices.
+enable_smart_app_banner                   : false                                      # Set to true to show a smart app banner at top of page on mobile devices.
 
 
 
