--- a/_config.yml
+++ b/_config.yml
@@ -33,22 +33,21 @@ youtube_username                          :
 
 # Feature List                            Edit, add or remove features to be presented.
 features                                  :
-
-  - title                                 : GitHub Pages Jekyll Theme
-    description                           : Designed for GitHub Pages. Fork. Edit _config.yml. Upload screenshot/video. Push to gh-pages branch. Voilá!
-    fontawesome_icon_name                 : magic
+  - title                                 : Appointments
+    description                           : Up to date calendar of all appointments at your studio.  Whether you have one employee or several.
+    fontawesome_icon_name                 : calendar-alt
     
-  - title                                 : iPhone Device Preview
-    description                           : Preview your app in the context of an iPhone device. Five different device colors included.
-    fontawesome_icon_name                 : mobile
+  - title                                 : Manage Services
+    description                           : Add, delete and update services. Edit service title and description.  Manage pricing options.
+    fontawesome_icon_name                 : briefcase
+    
+  - title                                 : Manage Employees
+    description                           : Add employees.  Update employee information.
+    fontawesome_icon_name                 : address-card
 
-  - title                                 : Video Support
-    description                           : Preview app video on the iPhone device simply by placing your video files in the videos folder.
-    fontawesome_icon_name                 : play-circle
-
-  - title                                 : Automatic Icon and Metadata
-    description                           : Enter iOS app ID in the _config.yml file to automatically fetch app icon, price and App Store Link.
-    fontawesome_icon_name                 : sync
+  - title                                 : Studio Location
+    description                           : Make sure customers always have the latest and most accurate studio information.
+    fontawesome_icon_name                 : map-pin
 
   - title                                 : Easy to Tweak
     description                           : Tweak accent color, images, icons and transparency via the _config.yml file. No HTML/CSS needed.
