--- a/_config.yml
+++ b/_config.yml
@@ -49,25 +49,9 @@ features                                  :
     description                           : Make sure customers always have the latest and most accurate studio information.
     fontawesome_icon_name                 : map-pin
 
-  - title                                 : Easy to Tweak
-    description                           : Tweak accent color, images, icons and transparency via the _config.yml file. No HTML/CSS needed.
-    fontawesome_icon_name                 : adjust
-  
-  - title                                 : Feature List
-    description                           : Add features (like this one) to your site via the _config.yml file. No HTML/CSS needed.
-    fontawesome_icon_name                 : star
-
-  - title                                 : Smart App Banner
-    description                           : Display a smart app banner on iOS devices.
-    fontawesome_icon_name                 : arrow-alt-circle-down
-
-  - title                                 : Social Links
-    description                           : Easily add social media accounts and contact info in the footer via the _config.yml file. No HTML/CSS needed.
-    fontawesome_icon_name                 : link
-
-  - title                                 : FontAwesome Support
-    description                           : Pick custom Font Awesome icons for the feature list via the _config.yml file. No HTML/CSS needed.
-    fontawesome_icon_name                 : info-circle
+  - title                                 : Studio Timing
+    description                           : Manage location hours and let customers know when they can book an appointment.
+    fontawesome_icon_name                 : clock
 
   - title                                 : # New Feature Title
     description                           : # New Feature Description
