--- a/_config.yml
+++ b/_config.yml
@@ -19,14 +19,14 @@ enable_smart_app_banner                   : false                               
 
 
 # Information About Yourself
-your_name                                 : Emil Baehr                                
-your_link                                 : https://emilbaehr.com                     
-your_city                                 : Copenhagen                                
-email_address                             : emil.baehr@gmail.com
+your_name                                 : Massaj                               
+your_link                                 : https://massaj.io                     
+your_city                                 : San Francisco                                
+email_address                             : feedback@massaj.io
 facebook_username                         :                                           
-instagram_username                        : ebaehr
-twitter_username                          : ebaehr
-github_username                           : emilbaehr
+instagram_username                        : 
+twitter_username                          : 
+github_username                           : 
 youtube_username                          :
 
 
