--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@ ios_app_id                                :                                 # Re
 
 appstore_link                             :                                           # Automatically populates if not set and if iOS app ID is set. Otherwise enter manually.
 playstore_link                            :                                           # Enter Google Play Store URL.
-presskit_download_link                    : https://emilbaehr.com                                          # Enter a link to downloadable file or (e.g. public Dropbox link to a .zip file). 
+presskit_download_link                    :                                           # Enter a link to downloadable file or (e.g. public Dropbox link to a .zip file). 
                                                                                       # Or upload your press kit file to assets and set path accordingly (e.g. "assets/your_press_kit.zip").
 
 app_icon                                  : assets/ItunesArtwork@2x.png                      # Automatically populates if not set and if iOS app ID is set.  Otherwise enter path to icon file manually.
@@ -19,7 +19,7 @@ enable_smart_app_banner                   : false                               
 
 
 # Information About Yourself
-your_name                                 : Massaj                               
+your_name                                 : Flicka LLC                               
 your_link                                 : https://massaj.io                     
 your_city                                 : San Francisco                                
 email_address                             : feedback@massaj.io
